[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aman"
authors = [
    {name = "Christian Vogelgsang", email = "chris@vogelgsang.org"},
]
description = "Browse Amiga autodoc pages like man pages on your modern system"
requires-python = ">=3.7"
keywords = ["AmigaOS", "autodoc", "man page"]
license = {text = "GPL-v2"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: System :: Emulators",
]
dynamic = ["version", "readme"]

[tool.setuptools]
zip-safe = true
include-package-data = true
packages = ["aman"]

[tool.setuptools.dynamic]
readme = { file="README.md", content-type="text/markdown" }

[tool.setuptools_scm]

[project.scripts]
aman = "aman:main"
